--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
       border-radius: 10px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     }
+    .avis-item img {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
     .stars {
       color: gold;
       margin-top: 10px;
@@ -163,26 +168,36 @@
     <h2>Avis Clients</h2>
     <div class="avis-marquee">
       <div class="avis-item">
+        <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/271983936_104004215468482_8454322112542712125_n.jpg" alt="Avis 1">
         <p>« Très professionnel, travail impeccable et rapide. Je recommande vivement. »</p>
         <div class="stars">★★★★★</div>
         <small>- Jean Dupont</small>
       </div>
       <div class="avis-item">
+        <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/272009109_104004182135152_3180548795172032896_n.jpg" alt="Avis 2">
         <p>« Entreprise sérieuse et réactive. Les finitions sont top. Merci ME Construction. »</p>
         <div class="stars">★★★★★</div>
         <small>- Sarah B.</small>
       </div>
       <div class="avis-item">
+        <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/271998667_104004198801817_4533534726012342588_n.jpg" alt="Avis 3">
         <p>« Je suis ravi de ma terrasse. Service client au top. »</p>
         <div class="stars">★★★★☆</div>
         <small>- Laurent C.</small>
       </div>
       <div class="avis-item">
+        <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/271964501_104004185468485_1475748317783636202_n.jpg" alt="Avis 4">
         <p>« Travail de qualité, équipe à l'écoute. Très satisfait du résultat final. »</p>
         <div class="stars">★★★★★</div>
         <small>- Camille R.</small>
       </div>
     </div>
+    <p style="text-align: center; margin-top: 30px;">
+      <a href="https://www.facebook.com/people/Me-construction/100066785978290/reviews/" target="_blank"
+         style="display: inline-block; background-color: #1abc9c; color: white; font-weight: bold; padding: 12px 24px; border-radius: 8px; text-decoration: none;">
+        Voir plus d’avis
+      </a>
+    </p>
   </section>
 
   <section class="section" id="contact">
@@ -191,7 +206,11 @@
     <p><strong>Adresse :</strong> Annemasse, France</p>
     <p><strong>Téléphone :</strong> <a href="tel:+33000000000" style="color:#1abc9c; text-decoration:none;">+33 0 00 00 00 00</a></p>
     <p><strong>Email :</strong> <a href="mailto:contact@meconstruction.fr" style="color:#1abc9c; text-decoration:none;">contact@meconstruction.fr</a></p>
-    <p><strong>Facebook :</strong> <a href="https://www.facebook.com/people/Me-construction/100066785978290/" target="_blank" style="color:#1abc9c;">ME Construction</a></p>
+    <p style="text-align: center;">
+      <a href="https://www.facebook.com/people/Me-construction/100066785978290/" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook ME Construction" style="width: 60px; height: auto;">
+      </a>
+    </p>
   </section>
 
   <footer>
