--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ME Construction - Revêtement Extérieur</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
-      margin: 0; padding: 0; box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
     body {
       font-family: 'Poppins', sans-serif;
@@ -20,15 +22,6 @@
       text-align: center;
       padding: 80px 20px;
       animation: fadeIn 2s ease-in-out;
-    }
-    header h1 {
-      font-weight: 700;
-      font-size: 3rem;
-      margin-bottom: 12px;
-    }
-    header p {
-      font-size: 1.3rem;
-      color: #a5c1e0;
     }
     nav {
       display: flex;
@@ -55,42 +48,31 @@
       max-width: 1200px;
       margin: auto;
     }
-    h2 {
-      text-align: center;
-      font-weight: 600;
-      margin-bottom: 40px;
-      font-size: 2rem;
-      color: #1abc9c;
-    }
     .services, .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 30px;
       margin-top: 40px;
     }
+    .card, .gallery img {
+      opacity: 0;
+      transform: translateY(50px);
+      transition: opacity 0.6s ease, transform 0.6s ease;
+    }
+    .visible {
+      opacity: 1 !important;
+      transform: translateY(0) !important;
+    }
     .card {
       background: #1f2b45;
       padding: 25px;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease;
-    }
-    .card:hover {
-      transform: translateY(-10px);
-    }
-    .card h3 {
-      margin-bottom: 15px;
-      color: #1abc9c;
     }
     .gallery img {
       width: 100%;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.4);
-      transition: transform 0.3s ease;
-      cursor: pointer;
-    }
-    .gallery img:hover {
-      transform: scale(1.05);
     }
     footer {
       background: #111831;
@@ -116,41 +98,15 @@
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-      flex-shrink: 0;
     }
     .avis-item img {
       width: 100%;
       border-radius: 8px;
       margin-bottom: 10px;
-      object-fit: cover;
-      height: 180px;
     }
     .stars {
       color: gold;
       margin-top: 10px;
-      font-size: 1.2rem;
-    }
-    #contact p {
-      max-width: 400px;
-      margin: 10px auto;
-      font-size: 1.1rem;
-    }
-    #contact a {
-      color: #1abc9c;
-      text-decoration: none;
-    }
-    #contact a:hover {
-      text-decoration: underline;
-    }
-    #contact img {
-      width: 60px;
-      height: auto;
-      margin-top: 20px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      cursor: pointer;
-      filter: drop-shadow(0 0 3px #1abc9c);
     }
     @keyframes scrollAvis {
       0% { transform: translateX(100%); }
@@ -171,7 +127,6 @@
       }
       .avis-item {
         margin-bottom: 20px;
-        min-width: auto;
       }
     }
   </style>
@@ -192,76 +147,54 @@
   <section class="section" id="services">
     <h2>Nos Services</h2>
     <div class="services">
-      <div class="card">
-        <h3>Pose de carrelage extérieur</h3>
-        <p>Installation professionnelle de dalles sur plots, designs personnalisés pour vos terrasses et allées.</p>
-      </div>
-      <div class="card">
-        <h3>Terrasses en bois</h3>
-        <p>Création de terrasses élégantes et durables en bois naturel ou composite.</p>
-      </div>
-      <div class="card">
-        <h3>Rénovation & Entretien</h3>
-        <p>Remise à neuf de vos revêtements extérieurs et conseils pour l'entretien durable.</p>
-      </div>
+      <div class="card"> <h3>Pose de carrelage extérieur</h3><p>Installation professionnelle de dalles sur plots, designs personnalisés pour vos terrasses et allées.</p></div>
+      <div class="card"> <h3>Terrasses en bois</h3><p>Création de terrasses élégantes et durables en bois naturel ou composite.</p></div>
+      <div class="card"> <h3>Rénovation & Entretien</h3><p>Remise à neuf de vos revêtements extérieurs et conseils pour l'entretien durable.</p></div>
     </div>
   </section>
 
   <section class="section" id="realisations">
     <h2>Réalisations</h2>
     <div class="gallery">
-      <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/271983936_104004215468482_8454322112542712125_n.jpg" alt="Projet 1" />
-      <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/272009109_104004182135152_3180548795172032896_n.jpg" alt="Projet 2" />
-      <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/271998667_104004198801817_4533534726012342588_n.jpg" alt="Projet 3" />
-      <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/271964501_104004185468485_1475748317783636202_n.jpg" alt="Projet 4" />
-      <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/272044568_104004172135153_5532304476465048907_n.jpg" alt="Projet 5" />
+      <img src="img/photo1.jpg" alt="Projet 1" />
+      <img src="img/photo2.jpg" alt="Projet 2" />
+      <img src="img/photo3.jpg" alt="Projet 3" />
     </div>
   </section>
 
   <section class="section" id="avis">
     <h2>Avis Clients</h2>
-    <div class="avis-marquee" aria-label="Avis clients défilants">
+    <div class="avis-marquee">
       <div class="avis-item">
-        <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/271983936_104004215468482_8454322112542712125_n.jpg" alt="Photo Jean Dupont" />
-        <p>« Très professionnel, travail impeccable et rapide. Je recommande vivement. »</p>
-        <div class="stars" aria-label="5 étoiles">★★★★★</div>
-        <small>- Jean Dupont</small>
+        <img src="img/client1.jpg" alt="Client 1">
+        <p>Projet d’une terrasse en dalles carrelage de 42m². Me Construction a été à l’écoute de notre projet, nous a conseillé sur les matériaux, et a réalisé une prestation parfaite dans un temps record ! Nous sommes ravis du résultat. Merci !</p>
+        <div class="stars">★★★★★</div>
+        <small>- Florian Moine</small>
       </div>
       <div class="avis-item">
-        <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/272009109_104004182135152_3180548795172032896_n.jpg" alt="Photo Sarah B." />
-        <p>« Entreprise sérieuse et réactive. Les finitions sont top. Merci ME Construction. »</p>
-        <div class="stars" aria-label="5 étoiles">★★★★★</div>
-        <small>- Sarah B.</small>
+        <img src="img/client2.jpg" alt="Client 2">
+        <p>Réalisation de notre terrasse de 120m², pose de dalles sur plots. Artisan minutieux, à l'écoute et très professionnel. Nous recommandons ME Construction sans hésitation.</p>
+        <div class="stars">★★★★★</div>
+        <small>- Alexandre Oliveira</small>
       </div>
       <div class="avis-item">
-        <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/271998667_104004198801817_4533534726012342588_n.jpg" alt="Photo Laurent C." />
-        <p>« Je suis ravi de ma terrasse. Service client au top. »</p>
-        <div class="stars" aria-label="4 étoiles">★★★★☆</div>
-        <small>- Laurent C.</small>
-      </div>
-      <div class="avis-item">
-        <img src="https://scontent.fcmf1-1.fna.fbcdn.net/v/t39.30808-6/271964501_104004185468485_1475748317783636202_n.jpg" alt="Photo Camille R." />
-        <p>« Travail de qualité, équipe à l'écoute. Très satisfait du résultat final. »</p>
-        <div class="stars" aria-label="5 étoiles">★★★★★</div>
-        <small>- Camille R.</small>
+        <img src="img/client3.jpg" alt="Client 3">
+        <p>Travail précis et de qualité, ponctuel, à l'écoute, prix compétitif. Je suis très très satisfait du travail réalisé. Contactez-les les yeux fermés !</p>
+        <div class="stars">★★★★★</div>
+        <small>- Alex</small>
       </div>
     </div>
-    <p style="text-align: center; margin-top: 30px;">
-      <a href="https://www.facebook.com/people/Me-construction/100066785978290/reviews/" target="_blank" rel="noopener" style="display: inline-block; background-color: #1abc9c; color: white; font-weight: bold; padding: 12px 24px; border-radius: 8px; text-decoration: none;">
-        Voir plus d’avis
-      </a>
-    </p>
   </section>
 
   <section class="section" id="contact">
     <h2>Contact</h2>
     <p>Pour toute demande de devis ou renseignement, contactez-nous :</p>
     <p><strong>Adresse :</strong> Annemasse, France</p>
-    <p><strong>Téléphone :</strong> <a href="tel:+33000000000">+33 0 00 00 00 00</a></p>
-    <p><strong>Email :</strong> <a href="mailto:contact@meconstruction.fr">contact@meconstruction.fr</a></p>
+    <p><strong>Téléphone :</strong> <a href="tel:+33000000000" style="color:#1abc9c; text-decoration:none;">+33 0 00 00 00 00</a></p>
+    <p><strong>Email :</strong> <a href="mailto:contact@meconstruction.fr" style="color:#1abc9c; text-decoration:none;">contact@meconstruction.fr</a></p>
     <p style="text-align: center;">
-      <a href="https://www.facebook.com/people/Me-construction/100066785978290/" target="_blank" rel="noopener">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook ME Construction" />
+      <a href="https://www.facebook.com/people/Me-construction/100066785978290/" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook ME Construction" style="width: 60px; height: auto;">
       </a>
     </p>
   </section>
@@ -271,7 +204,6 @@
   </footer>
 
   <script>
-    // Animation fade-in pour les éléments au scroll (optionnel)
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
@@ -281,7 +213,7 @@
       });
     }, { threshold: 0.1 });
 
-    document.querySelectorAll('.card, .gallery img, .avis-item').forEach(el => {
+    document.querySelectorAll('.card, .gallery img').forEach(el => {
       observer.observe(el);
     });
   </script>
