--- a/index.html
+++ b/index.html
@@ -163,28 +163,34 @@
   </section>
 
   <section class="section" id="avis">
-    <h2>Avis Clients</h2>
-    <div class="avis-marquee">
-      <div class="avis-item">
-        <img src="img/client1.jpg" alt="Client 1">
-        <p>Projet d’une terrasse en dalles carrelage de 42m². Me Construction a été à l’écoute de notre projet, nous a conseillé sur les matériaux, et a réalisé une prestation parfaite dans un temps record ! Nous sommes ravis du résultat. Merci !</p>
-        <div class="stars">★★★★★</div>
-        <small>- Florian Moine</small>
-      </div>
-      <div class="avis-item">
-        <img src="img/client2.jpg" alt="Client 2">
-        <p>Réalisation de notre terrasse de 120m², pose de dalles sur plots. Artisan minutieux, à l'écoute et très professionnel. Nous recommandons ME Construction sans hésitation.</p>
-        <div class="stars">★★★★★</div>
-        <small>- Alexandre Oliveira</small>
-      </div>
-      <div class="avis-item">
-        <img src="img/client3.jpg" alt="Client 3">
-        <p>Travail précis et de qualité, ponctuel, à l'écoute, prix compétitif. Je suis très très satisfait du travail réalisé. Contactez-les les yeux fermés !</p>
-        <div class="stars">★★★★★</div>
-        <small>- Alex</small>
-      </div>
+  <h2>Avis Clients</h2>
+  <div class="avis-marquee">
+    <div class="avis-item">
+      <img src="img/clientAlex.webp" alt="Client Florian Moine">
+      <p>
+        Projet d’une terrasse en dalles carrelage de 42m². Me Construction a été à l’écoute de notre projet, nous a conseillé sur les matériaux, et a réalisé une prestation parfaite dans un temps record ! Nous sommes ravis du résultat. Merci !
+      </p>
+      <div class="stars">★★★★★</div>
+      <small>- Florian Moine</small>
     </div>
-  </section>
+    <div class="avis-item">
+      <img src="img/clientAlex2.webp" alt="Client Alexandre Oliveira">
+      <p>
+        Réalisation de notre terrasse de 120m², pose de dalles sur plots. Artisan minutieux, à l'écoute et très professionnel. Nous recommandons ME Construction sans hésitation.
+      </p>
+      <div class="stars">★★★★★</div>
+      <small>- Alexandre Oliveira</small>
+    </div>
+    <div class="avis-item">
+      <img src="img/clientAlex3.webp" alt="Client Alex">
+      <p>
+        Travail précis et de qualité, ponctuel, à l'écoute, prix compétitif. Je suis très très satisfait du travail réalisé. Contactez-les les yeux fermés !
+      </p>
+      <div class="stars">★★★★★</div>
+      <small>- Alex</small>
+    </div>
+  </div>
+</section>
 
   <section class="section" id="contact">
     <h2>Contact</h2>
