--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <small>- Alexandre Oliveira</small>
     </div>
     <div class="avis-item">
-      <img src="img/clientAlex3.webp" alt="Client Alex">
+      <img src="img/clientAlex.webp" alt="Client Alex" style="max-width: 300px;">
       <p>
         Travail précis et de qualité, ponctuel, à l'écoute, prix compétitif. Je suis très très satisfait du travail réalisé. Contactez-les les yeux fermés !
       </p>
