--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
       overflow-x: hidden;
     }
     header {
-      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      background: url('img/back.jpg') no-repeat center center;
+      background-size: cover;
       text-align: center;
       padding: 80px 20px;
       animation: fadeIn 2s ease-in-out;
+      color: white;
+      position: relative;
+      z-index: 1;
+    }
+    header::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.5);
+      z-index: -1;
     }
     nav {
       display: flex;
@@ -88,7 +99,7 @@
     }
     .avis-marquee {
       display: flex;
-      animation: scrollAvis 40s linear infinite;
+      animation: scrollAvis 20s linear infinite;
       gap: 40px;
       padding: 20px;
     }
@@ -101,12 +112,15 @@
     }
     .avis-item img {
       width: 100%;
+      height: 200px;
+      object-fit: cover;
       border-radius: 8px;
       margin-bottom: 10px;
     }
     .stars {
       color: gold;
       margin-top: 10px;
+      font-size: 1.2em;
     }
     @keyframes scrollAvis {
       0% { transform: translateX(100%); }
@@ -163,29 +177,28 @@
   </section>
 
   <section class="section" id="avis">
-  <h2>Avis Clients</h2>
-  <div class="avis-marquee">
-    <div class="avis-item">
-      <img src="img/clientAlex.webp" alt="Client Alex">
-      <p>Travail précis et de qualité, ponctuel, à l'écoute, prix compétitif. Je suis très très satisfait du travail réalisé. Contactez-les les yeux fermés !</p>
-      <div class="stars">★★★★★</div>
-      <small>- Alex</small>
+    <h2>Avis Clients</h2>
+    <div class="avis-marquee">
+      <div class="avis-item">
+        <img src="img/clientAlex.webp" alt="Client Alex">
+        <p>Travail précis et de qualité, ponctuel, à l'écoute, prix compétitif. Je suis très très satisfait du travail réalisé. Contactez-les les yeux fermés !</p>
+        <div class="stars">★★★★★</div>
+        <small>- Alex</small>
+      </div>
+      <div class="avis-item">
+        <img src="img/clientFlorian.webp" alt="Client Florian">
+        <p>Projet d’une terrasse en dalles carrelage de 42m². Me Construction a été à l’écoute de notre projet, nous a conseillé sur les matériaux, et a réalisé une prestation parfaite dans un temps record ! Nous sommes ravis du résultat. Merci !</p>
+        <div class="stars">★★★★★</div>
+        <small>- Florian Moine</small>
+      </div>
+      <div class="avis-item">
+        <img src="img/clientAlexandre.webp" alt="Client Alexandre">
+        <p>Réalisation de notre terrasse de 120m², pose de dalles sur plots. Artisan minutieux, à l'écoute et très professionnel. Nous recommandons ME Construction sans hésitation.</p>
+        <div class="stars">★★★★★</div>
+        <small>- Alexandre Oliveira</small>
+      </div>
     </div>
-    <div class="avis-item">
-      <img src="img/client1.jpg" alt="Client 1">
-      <p>Projet d’une terrasse en dalles carrelage de 42m². Me Construction a été à l’écoute de notre projet, nous a conseillé sur les matériaux, et a réalisé une prestation parfaite dans un temps record ! Nous sommes ravis du résultat. Merci !</p>
-      <div class="stars">★★★★★</div>
-      <small>- Florian Moine</small>
-    </div>
-    <div class="avis-item">
-      <img src="img/client2.jpg" alt="Client 2">
-      <p>Réalisation de notre terrasse de 120m², pose de dalles sur plots. Artisan minutieux, à l'écoute et très professionnel. Nous recommandons ME Construction sans hésitation.</p>
-      <div class="stars">★★★★★</div>
-      <small>- Alexandre Oliveira</small>
-    </div>
-  </div>
-</section>
-
+  </section>
 
   <section class="section" id="contact">
     <h2>Contact</h2>
@@ -208,17 +221,4 @@
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-          observer.unobserve(entry.target);
-        }
-      });
-    }, { threshold: 0.1 });
-
-    document.querySelectorAll('.card, .gallery img').forEach(el => {
-      observer.observe(el);
-    });
-  </script>
-</body>
-</html>
-
-
+          entry.target.classList
