--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       overflow-x: hidden;
     }
     header {
-      background: url('img/back.jpg') no-repeat center center;
-      background-size: cover;
-      text-align: center;
-      padding: 80px 20px;
-      animation: fadeIn 2s ease-in-out;
-      color: white;
-      position: relative;
-      z-index: 1;
-    }
+  background: url('img/back.jpg') no-repeat center top;
+  background-size: cover;
+  text-align: center;
+  padding: 80px 20px;
+  animation: fadeIn 2s ease-in-out;
+  color: white;
+  position: relative;
+  z-index: 1;
+}
     header::before {
       content: "";
       position: absolute;
