--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       overflow-x: hidden;
     }
     header {
-  background: url('img/back.jpg') no-repeat center top;
+  background: url('img/back.jpg') no-repeat center 40%;
   background-size: cover;
   text-align: center;
   padding: 80px 20px;
