--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
       overflow-x: hidden;
     }
     header {
-  background: url('img/back.jpg') no-repeat center 40%;
-  background-size: cover;
-  text-align: center;
-  padding: 80px 20px;
-  animation: fadeIn 2s ease-in-out;
-  color: white;
-  position: relative;
-  z-index: 1;
-}
-    header::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.5);
-      z-index: -1;
+      background: url('img/back.jpg') no-repeat center 40%;
+      background-size: cover;
+      text-align: center;
+      padding: 80px 20px 140px 20px; /* padding bottom plus grand */
+      animation: fadeIn 2s ease-in-out;
+      color: white;
+      position: relative;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    header h1, header p {
+      background-color: rgba(0, 0, 0, 0.5); /* fond semi-transparent */
+      padding: 10px 20px;
+      border-radius: 8px;
     }
     nav {
       display: flex;
@@ -99,7 +101,7 @@
     }
     .avis-marquee {
       display: flex;
-      animation: scrollAvis 20s linear infinite;
+      animation: scrollAvis 25s linear infinite; /* vitesse plus rapide */
       gap: 40px;
       padding: 20px;
     }
@@ -112,15 +114,12 @@
     }
     .avis-item img {
       width: 100%;
-      height: 200px;
-      object-fit: cover;
       border-radius: 8px;
       margin-bottom: 10px;
     }
     .stars {
       color: gold;
       margin-top: 10px;
-      font-size: 1.2em;
     }
     @keyframes scrollAvis {
       0% { transform: translateX(100%); }
@@ -180,19 +179,19 @@
     <h2>Avis Clients</h2>
     <div class="avis-marquee">
       <div class="avis-item">
-        <img src="img/clientAlex.webp" alt="Client Alex">
+        <img src="img/clientAlex.webp" alt="Alex">
         <p>Travail précis et de qualité, ponctuel, à l'écoute, prix compétitif. Je suis très très satisfait du travail réalisé. Contactez-les les yeux fermés !</p>
         <div class="stars">★★★★★</div>
         <small>- Alex</small>
       </div>
       <div class="avis-item">
-        <img src="img/clientFlorian.webp" alt="Client Florian">
+        <img src="img/clientFlorian.webp" alt="Florian Moine">
         <p>Projet d’une terrasse en dalles carrelage de 42m². Me Construction a été à l’écoute de notre projet, nous a conseillé sur les matériaux, et a réalisé une prestation parfaite dans un temps record ! Nous sommes ravis du résultat. Merci !</p>
         <div class="stars">★★★★★</div>
         <small>- Florian Moine</small>
       </div>
       <div class="avis-item">
-        <img src="img/clientAlexandre.webp" alt="Client Alexandre">
+        <img src="img/clientAlexandre.webp" alt="Alexandre Oliveira">
         <p>Réalisation de notre terrasse de 120m², pose de dalles sur plots. Artisan minutieux, à l'écoute et très professionnel. Nous recommandons ME Construction sans hésitation.</p>
         <div class="stars">★★★★★</div>
         <small>- Alexandre Oliveira</small>
@@ -221,4 +220,7 @@
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
-          entry.target.classList
+          entry.target.classList.add('visible');
+          observer.unobserve(entry.target);
+        }
+     
