--- a/index.html
+++ b/index.html
@@ -18,31 +18,25 @@
       overflow-x: hidden;
     }
     header {
-      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      background: url('img/back.jpg') no-repeat center top;
+      background-size: cover;
       text-align: center;
-      padding: 80px 20px;
+      padding: 140px 20px 80px 20px;
       animation: fadeIn 2s ease-in-out;
       position: relative;
-      overflow: hidden;
-    }
-    header::before {
-      content: "";
-      position: absolute;
-      top: 60px; /* un peu vers le bas */
-      left: 50%;
-      transform: translateX(-50%);
-      width: 100%;
-      max-width: 600px;
-      height: 250px;
-      background: url('img/back.jpg') no-repeat center center/cover;
-      opacity: 0.2;
-      z-index: 0;
-      pointer-events: none;
-      border-radius: 20px;
-    }
-    header h1, header p {
-      position: relative;
       z-index: 1;
+    }
+    header h1 {
+      font-size: 3rem;
+      font-weight: 700;
+      color: #fff;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.7);
+    }
+    header p {
+      font-size: 1.25rem;
+      margin-top: 10px;
+      color: #e0e0e0;
+      text-shadow: 0 1px 5px rgba(0,0,0,0.6);
     }
     nav {
       display: flex;
@@ -79,7 +73,7 @@
       opacity: 0;
       transform: translateY(50px);
       transition: opacity 0.6s ease, transform 0.6s ease;
-      border-radius: 12px;
+      cursor: pointer;
     }
     .visible {
       opacity: 1 !important;
@@ -91,12 +85,14 @@
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.3);
     }
-    .gallery img {
+    .gallery a img {
       width: 100%;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.4);
-      object-fit: cover;
-      height: 200px;
+      transition: transform 0.3s ease;
+    }
+    .gallery a:hover img {
+      transform: scale(1.05);
     }
     footer {
       background: #111831;
@@ -112,7 +108,7 @@
     }
     .avis-marquee {
       display: flex;
-      animation: scrollAvis 20s linear infinite;
+      animation: scrollAvis 25s linear infinite;
       gap: 40px;
       padding: 20px;
     }
@@ -127,12 +123,25 @@
       width: 100%;
       border-radius: 8px;
       margin-bottom: 10px;
-      object-fit: cover;
-      height: 150px;
+      cursor: zoom-in;
     }
     .stars {
       color: gold;
       margin-top: 10px;
+    }
+    #realisations-plus-photos {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      margin-top: 20px;
+      color: #1877f2;
+      font-weight: 600;
+      text-decoration: none;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    #realisations-plus-photos svg {
+      fill: #1877f2;
     }
     @keyframes scrollAvis {
       0% { transform: translateX(100%); }
@@ -173,85 +182,33 @@
   <section class="section" id="services">
     <h2>Nos Services</h2>
     <div class="services">
-      <div class="card">
-        <h3>Pose de carrelage extérieur</h3>
-        <p>Installation professionnelle de dalles sur plots, designs personnalisés pour vos terrasses et allées.</p>
-      </div>
-      <div class="card">
-        <h3>Terrasses en bois</h3>
-        <p>Création de terrasses élégantes et durables en bois naturel ou composite.</p>
-      </div>
-      <div class="card">
-        <h3>Rénovation & Entretien</h3>
-        <p>Remise à neuf de vos revêtements extérieurs et conseils pour l'entretien durable.</p>
-      </div>
+      <div class="card"> <h3>Pose de carrelage extérieur</h3><p>Installation professionnelle de dalles sur plots, designs personnalisés pour vos terrasses et allées.</p></div>
+      <div class="card"> <h3>Terrasses en bois</h3><p>Création de terrasses élégantes et durables en bois naturel ou composite.</p></div>
+      <div class="card"> <h3>Rénovation & Entretien</h3><p>Remise à neuf de vos revêtements extérieurs et conseils pour l'entretien durable.</p></div>
     </div>
   </section>
 
   <section class="section" id="realisations">
     <h2>Réalisations</h2>
     <div class="gallery">
-      <img src="img/bois.jpg" alt="Terrasse en bois" />
-      <img src="img/house.jpg" alt="Maison avec revêtement extérieur" />
-      <img src="img/terasse.jpg" alt="Terrasse carrelée" />
+      <a href="img/bois.jpg" target="_blank" rel="noopener noreferrer"><img src="img/bois.jpg" alt="Terrasse en bois" /></a>
+      <a href="img/house.jpg" target="_blank" rel="noopener noreferrer"><img src="img/house.jpg" alt="Maison avec revêtement extérieur" /></a>
+      <a href="img/terasse.jpg" target="_blank" rel="noopener noreferrer"><img src="img/terasse.jpg" alt="Terrasse carrelée" /></a>
     </div>
+
+    <a href="https://www.facebook.com/MEConstruction" target="_blank" rel="noopener noreferrer" id="realisations-plus-photos">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+        <path d="M22,12c0-5.52-4.48-10-10-10S2,6.48,2,12c0,4.99,3.66,9.12,8.44,9.88v-6.99H7.9v-2.89h2.54v-2.21 c0-2.5,1.49-3.89,3.77-3.89c1.09,0,2.23,0.2,2.23,0.2v2.46h-1.26c-1.24,0-1.63,0.77-1.63,1.56v1.88h2.78l-0.44,2.89h-2.34v6.99 C18.34,21.12,22,16.99,22,12z"/>
+      </svg>
+      Pour plus de photos
+    </a>
   </section>
 
   <section class="section" id="avis">
     <h2>Avis Clients</h2>
     <div class="avis-marquee">
       <div class="avis-item">
-        <img src="img/clientAlex.webp" alt="Alex">
         <p>Travail précis et de qualité, ponctuel, à l'écoute, prix compétitif. Je suis très très satisfait du travail réalisé. Contactez-les les yeux fermés !</p>
+        <img src="img/clientAlex.webp" alt="Alex" title="Alex">
         <div class="stars">★★★★★</div>
-        <small>- Alex</small>
-      </div>
-      <div class="avis-item">
-        <img src="img/clientFlorian.webp" alt="Florian Moine">
-        <p>Projet d’une terrasse en dalles carrelage de 42m². Me Construction a été à l’écoute de notre projet, nous a conseillé sur les matériaux, et a réalisé une prestation parfaite dans un temps record ! Nous sommes ravis du résultat. Merci !</p>
-        <div class="stars">★★★★★</div>
-        <small>- Florian Moine</small>
-      </div>
-      <div class="avis-item">
-        <img src="img/clientAlexandre.webp" alt="Alexandre Oliveira">
-        <p>Réalisation de notre terrasse de 120m², pose de dalles sur plots. Artisan minutieux, à l'écoute et très professionnel. Nous recommandons ME Construction sans hésitation.</p>
-        <div class="stars">★★★★★</div>
-        <small>- Alexandre Oliveira</small>
-      </div>
-    </div>
-  </section>
-
-  <section class="section" id="contact">
-    <h2>Contact</h2>
-    <p>Pour toute demande de devis ou renseignement, contactez-nous :</p>
-    <p><strong>Adresse :</strong> Annemasse, France</p>
-    <p><strong>Téléphone :</strong> <a href="tel:+33000000000" style="color:#1abc9c; text-decoration:none;">+33 0 00 00 00 00</a></p>
-    <p><strong>Email :</strong> <a href="mailto:contact@meconstruction.fr" style="color:#1abc9c; text-decoration:none;">contact@meconstruction.fr</a></p>
-    <p style="text-align: center;">
-      <a href="https://www.facebook.com/people/Me-construction/100066785978290/" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook ME Construction" style="width: 60px; height: auto;">
-      </a>
-    </p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 ME Construction - Tous droits réservés</p>
-  </footer>
-
-  <script>
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-          observer.unobserve(entry.target);
-        }
-      });
-    }, { threshold: 0.1 });
-
-    document.querySelectorAll('.card, .gallery img').forEach(el => {
-      observer.observe(el);
-    });
-  </script>
-</body>
-</html>
-
+        
