--- a/index.html
+++ b/index.html
@@ -103,18 +103,32 @@
       border-radius: 10px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
       flex-shrink: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      max-height: 280px;
+      overflow: hidden;
+    }
+    .avis-item p {
+      flex-grow: 1;
+      font-size: 0.9rem;
+      line-height: 1.3;
+      margin-bottom: 10px;
+      overflow-y: auto;
     }
     .avis-item img {
       width: 100%;
-      max-width: 300px;
+      max-width: 200px;
       border-radius: 8px;
-      margin: 10px 0 5px;
+      margin: 5px 0 10px;
       cursor: zoom-in;
       display: block;
+      object-fit: cover;
+      height: 120px;
     }
     .stars {
       color: gold;
-      margin-top: 10px;
       font-size: 1.2rem;
     }
     #realisations-plus-photos {
@@ -138,8 +152,20 @@
       background: #111831;
       color: #aaa;
       text-align: center;
-      padding: 25px;
+      padding: 25px 20px;
       margin-top: 50px;
+      font-size: 1rem;
+      line-height: 1.5;
+    }
+    footer p {
+      margin: 6px 0;
+    }
+    footer a {
+      color: #1abc9c;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
     }
 
     @keyframes scrollAvis {
@@ -156,8 +182,8 @@
         animation: none;
       }
       .avis-item {
+        max-height: none;
         margin-bottom: 20px;
-        min-width: auto;
       }
       .gallery {
         grid-template-columns: 1fr;
@@ -232,9 +258,9 @@
   </section>
 
   <footer id="contact">
+    <p>Téléphone : <a href="tel:+33676553748">06 76 55 37 48</a></p>
+    <p>Email : <a href="mailto:Me.construction@outlook.fr">Me.construction@outlook.fr</a></p>
     <p>© 2025 ME Construction. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
-
-        
