--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
     }
     .avis-marquee {
       display: flex;
-      animation: scrollAvis 20s linear infinite;
-      gap: 40px;
-      padding: 20px;
+      animation: scrollAvis 15s linear infinite;
+      gap: 60px;
+      padding: 20px 10px;
     }
     .avis-item {
-      min-width: 280px;
+      min-width: 350px;
       background: #1f2b45;
       padding: 20px;
       border-radius: 10px;
@@ -107,21 +107,18 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      max-height: 280px;
-      overflow: hidden;
+      max-height: none;
     }
     .avis-item p {
-      flex-grow: 1;
-      font-size: 0.9rem;
-      line-height: 1.3;
-      margin-bottom: 10px;
-      overflow-y: auto;
+      font-size: 1rem;
+      line-height: 1.4;
+      margin-bottom: 15px;
+      white-space: normal;
     }
     .avis-item img {
-      width: 100%;
-      max-width: 200px;
+      width: 150px;
       border-radius: 8px;
-      margin: 5px 0 10px;
+      margin-bottom: 12px;
       cursor: zoom-in;
       display: block;
       object-fit: cover;
@@ -129,7 +126,8 @@
     }
     .stars {
       color: gold;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
+      user-select: none;
     }
     #realisations-plus-photos {
       display: inline-flex;
